[metadata]
name = kuryr-tempest-plugin
summary = Kuryr Tempest Plugin
description-file = README.rst
license = Apache Software License
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
home-page = https://docs.openstack.org/kuryr-tempest-plugin/latest/

[files]
packages =
    kuryr_tempest_plugin

[entry_points]
tempest.test_plugins =
    kuryr_tempest_tests = kuryr_tempest_plugin.plugin:KuryrTempestPlugin

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source
