[metadata]
name = kuryr-tempest-plugin
summary = Kuryr Tempest Plugin
description_file = README.rst
license = Apache Software License
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
author = OpenStack
author_email = openstack-discuss@lists.openstack.org
home_page = https://docs.openstack.org/kuryr-tempest-plugin/latest/

[files]
packages =
    kuryr_tempest_plugin

[entry_points]
tempest.test_plugins =
    kuryr_tempest_tests = kuryr_tempest_plugin.plugin:KuryrTempestPlugin
